[gd_scene load_steps=3 format=3 uid="uid://d1kqdp1cgx4nu"]

[ext_resource type="PackedScene" uid="uid://n73bp8x5og60" path="res://features/menu/general/MenuPanel.tscn" id="1_cbr1y"]
[ext_resource type="Script" uid="uid://dsy0aid6fqb8g" path="res://features/menu/main_menu/main_menu.gd" id="2_tx1m4"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_tx1m4")

[node name="MainMenu" parent="." instance=ExtResource("1_cbr1y")]
layout_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Play"

[node name="SettingsButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Settings"

[node name="ControlsButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Controls"

[node name="QuitButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Quit"
